// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/ui/menuItems/collapseMenuItem > should render correctly when isCollapsed is false 1`] = `
<div
  className="fui-MenuItem r11normc"
  data-automation-id="msla-collapse-menu-option"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  role="menuitem"
  tabIndex={0}
>
  <span
    className="fui-MenuItem__icon ro9koqv"
  >
    <svg
      aria-hidden={true}
      className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.5 12.5a1 1 0 0 1 1 .89V21a1 1 0 0 1-2 .12V15.9l-5.8 5.8a1 1 0 0 1-1.31.08l-.1-.08a1 1 0 0 1-.08-1.32l.08-.1 5.79-5.78H3a1 1 0 0 1-.12-2h7.62Zm3-10.5a1 1 0 0 1 1 .88V8.1l5.8-5.8a1 1 0 0 1 1.31-.08l.1.08a1 1 0 0 1 .08 1.32l-.08.1-5.8 5.8H21a1 1 0 0 1 .12 1.99H13.5a1 1 0 0 1-1-.88V3a1 1 0 0 1 1-1Z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden={true}
      className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.78 2.22c.26.27.29.68.07.98l-.07.08-6.23 6.23h5.7c.38 0 .7.28.74.65v.1c0 .38-.27.69-.64.74H13.68a.73.73 0 0 1-.2-.04l-.1-.04a.75.75 0 0 1-.38-.56v-7.6a.75.75 0 0 1 1.49-.1V8.43l6.23-6.22c.29-.3.76-.3 1.06 0ZM11 13.75v7.5a.75.75 0 0 1-1.5.11v-5.8l-6.22 6.22a.75.75 0 0 1-1.13-.98l.07-.08 6.22-6.22H2.75a.75.75 0 0 1-.74-.64v-.1c0-.42.33-.76.74-.76h7.56l.07.01.1.03.05.02.09.04.08.06c.06.04.11.09.15.14l.07.1.04.1.02.07.01.06v.06-.01l.01.07Z"
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    className="fui-MenuItem__content r1ls86vo"
  >
    Collapse action
  </span>
</div>
`;

exports[`lib/ui/menuItems/collapseMenuItem > should render correctly when isCollapsed is true 1`] = `
<div
  className="fui-MenuItem r11normc"
  data-automation-id="msla-collapse-menu-option"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  role="menuitem"
  tabIndex={0}
>
  <span
    className="fui-MenuItem__icon ro9koqv"
  >
    <svg
      aria-hidden={true}
      className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.67 14.92a1 1 0 0 1 1.41 1.42L6.41 19H8a1 1 0 0 1 1 .89V20a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1v-4a1 1 0 1 1 2 0v1.6l2.67-2.68ZM16 21a1 1 0 1 1 0-2h1.59l-2.67-2.66a1 1 0 0 1-.08-1.32l.08-.1a1 1 0 0 1 1.42 0L19 17.6V16a1 1 0 0 1 .89-.99H20a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1h-4ZM8 3a1 1 0 0 1 0 2H6.42l2.66 2.67a1 1 0 0 1 .09 1.32l-.09.1a1 1 0 0 1-1.41 0L5 6.4V8a1 1 0 0 1-.88 1H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4Zm12 0a1 1 0 0 1 1 1v4a1 1 0 1 1-2 0V6.41l-2.66 2.67a1 1 0 0 1-1.32.09l-.1-.09a1 1 0 0 1 0-1.41L17.6 5H16a1 1 0 0 1-.99-.88V4a1 1 0 0 1 1-1h4Z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden={true}
      className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.6 15.35a.75.75 0 0 1 1.06 1.06l-3.1 3.1h2.19c.38 0 .7.28.74.64l.01.1c0 .42-.34.75-.75.75h-4a.75.75 0 0 1-.75-.75v-4a.75.75 0 0 1 1.5 0v2.2l3.1-3.1ZM16.25 21a.75.75 0 0 1 0-1.5h2.2l-3.1-3.09a.75.75 0 0 1-.07-.98l.07-.08c.3-.3.77-.3 1.06 0l3.1 3.1v-2.2c0-.38.28-.69.64-.74h.1c.42 0 .75.33.75.74v4c0 .42-.33.75-.75.75h-4ZM7.75 3a.75.75 0 0 1 0 1.5H5.56l3.1 3.1c.26.26.29.68.07.97l-.07.09c-.3.29-.77.29-1.07 0L4.5 5.56v2.19c0 .38-.28.7-.65.74l-.1.01A.75.75 0 0 1 3 7.75v-4c0-.41.34-.75.75-.75h4Zm12.5 0c.42 0 .75.34.75.75v4a.75.75 0 0 1-1.5 0v-2.2l-3.09 3.1a.75.75 0 0 1-.98.08l-.08-.07a.75.75 0 0 1 0-1.07l3.1-3.09h-2.2a.75.75 0 0 1-.74-.65v-.1c0-.41.33-.75.74-.75h4Z"
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    className="fui-MenuItem__content r1ls86vo"
  >
    Expand action
  </span>
</div>
`;
